renamed background to nuclio

--- a/paper.tex
+++ b/paper.tex
@@ -67,7 +67,7 @@
 %\tableofcontents
 
 \input{sections/1_introduction}
-\input{sections/2_background}
+\input{sections/2_nuclio}
 \input{sections/3_fusionize}
 \input{sections/4_sand}
 \input{sections/5_profaastinate}
