added author attribution table

--- a/paper.tex
+++ b/paper.tex
@@ -19,6 +19,7 @@
 \usepackage[hidelinks]{hyperref}
 \usepackage{url}
 \usepackage[capitalise]{cleveref}
+\usepackage{booktabs}
 
 \lstdefinestyle{python}{
     language=Python,
@@ -79,5 +80,21 @@
 
 \bibliographystyle{IEEEtran}
 \bibliography{bibliography}
+
+\section*{Author Attribution}
+
+% Usage: Name & \ref{sec:section} \\
+
+\vspace{1em}
+\begin{center}
+    \begin{tabular}{l l} \toprule
+        Name & Sections \\ \midrule
+        Valentin Carl & \\
+        Daniel Gottschling & \\
+        Jonas Heisterberg & \\
+        David Schmidt & \\
+        Marvin Steinke & \\ \bottomrule
+    \end{tabular}
+\end{center}
 
 \end{document}
