added my section refs to author attribution

--- a/paper.tex
+++ b/paper.tex
@@ -93,7 +93,7 @@
         Daniel Gottschling & \\
         Jonas Heisterberg & \\
         David Schmidt & \\
-        Marvin Steinke & \\ \bottomrule
+        Marvin Steinke & \ref{sec:introduction}, \ref{sec:fusionize} \\ \bottomrule
     \end{tabular}
 \end{center}
 
