changed relative path to figures to fix compiler error

--- a/sections/1_introduction.tex
+++ b/sections/1_introduction.tex
@@ -69,7 +69,7 @@ operations \cite{schirmer2023profaastinate}.
 
 \begin{figure}
     \centering
-    \includegraphics[width=.9\linewidth]{../figures/cascadingcoldstart}
+    \includegraphics[width=.9\linewidth]{figures/cascadingcoldstart}
     \caption{
         Cold start cascades refer to a sequence of first-time function
         executions, such as during changes in load. The cumulative cold start
@@ -81,7 +81,7 @@ operations \cite{schirmer2023profaastinate}.
 
 \begin{figure}
     \centering
-    \includegraphics[width=\linewidth]{../figures/doublespending}
+    \includegraphics[width=\linewidth]{figures/doublespending}
     \caption{
         Invoking functions synchronously in the duration-based billing model of
         FaaS might result in duplicate charges: both lambda functions can incur
